--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,22 +1,12 @@
-jdbc:
-  driverClassName: com.mysql.jdbc.Driver
-  url: jdbc:mysql://127.0.0.1:3306/person_test
-  username: root
-  password: root
-
-#\u6FC0\u6D3B\u914D\u7F6E\u6587\u4EF6;\u9700\u8981\u6307\u5B9A\u5176\u5B83\u7684\u914D\u7F6E\u6587\u4EF6\u540D\u79F0
-
-
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/person_test
     type: com.alibaba.druid.pool.DruidDataSource
     username: root
-    password: root
+    password: 123456
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-
 
