--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/person_test
+    url: jdbc:mysql://localhost:3306/person_test?useSSL=false&serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
     type: com.zaxxer.hikari.HikariDataSource
     username: root
-    password: 123456
+    password: root
   jpa:
     hibernate:
       ddl-auto: none
